--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
         "prepare": "husky install"
     },
     "dependencies": {
-        "faker": "^5.5.3"
-    },
-    "devDependencies": {
-        "@types/faker": "^5.5.8",
         "branch-name-lint": "^2.1.1",
         "eslint": "^7.32.0",
         "eslint-config-airbnb-base": "^14.2.1",
         "eslint-plugin-html": "^6.2.0",
         "eslint-plugin-import": "^2.24.2",
         "eslint-plugin-no-jquery": "^2.6.0",
-        "husky": "^7.0.2",
-        "lint-staged": "^11.1.2",
+        "faker": "^5.5.3",
         "stylelint": "^13.13.1"
+    },
+    "devDependencies": {
+        "@types/faker": "^5.5.8",
+        "husky": "^7.0.2",
+        "lint-staged": "^11.1.2"
     },
     "author": "DrSmile444 <dmytro.vakulenko@masterofcode.com>",
     "license": "MIT",
