fix branch name liter action

--- a/.github/workflows/awesome-linter.yml
+++ b/.github/workflows/awesome-linter.yml
@@ -25,7 +25,7 @@ jobs:
       - run: npm install --production
       - run: npm run lint:css
 
-  lint-css:
+  lint-branch-name:
     name: Lint Branch Name
     runs-on: ubuntu-latest
     steps:
