--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,14 @@ typings/
 
 karma.conf.js
 protractor.conf.js
+
+# OS generated files #
+######################
+.DS_Store
+
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
