--- a/.github/workflows/awesome-linter.yml
+++ b/.github/workflows/awesome-linter.yml
@@ -25,3 +25,12 @@ jobs:
       - run: npm install --production
       - run: npm run lint:css
 
+  lint-branch-name:
+    name: Validate branch name
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: lekterable/branchlint-action@v1.0.0
+        with:
+          allowed: |
+            /^[0-9]+-(?:[\\d\\w]){5,70}/i
