--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     },
     "dependencies": {
         "branch-name-lint": "^2.1.1",
-        "eslint": "^7.32.0",
         "eslint-config-airbnb-base": "^14.2.1",
         "eslint-plugin-html": "^6.2.0",
         "eslint-plugin-import": "^2.24.2",
@@ -22,6 +21,9 @@
     },
     "devDependencies": {
         "@types/faker": "^5.5.8",
+        "@typescript-eslint/eslint-plugin": "^5.2.0",
+        "@typescript-eslint/parser": "^5.2.0",
+        "eslint": "^8.1.0",
         "husky": "^7.0.2",
         "lint-staged": "^11.1.2"
     },
