--- a/package.json
+++ b/package.json
@@ -4,24 +4,24 @@
     "description": "Репозиторій з курсу «Advanced Front-end» проекту Masters Academy",
     "scripts": {
         "lint": "lint-staged",
-        "lint:all": "npm run lint:branch-name && npm run lint:css && npm run lint:js",
+        "lint:all": "npm run lint:branch-name && npm run lint:css && npm run lint:js && npm run lint:html",
         "lint:js": "npx eslint --config .eslintrc.js ./homeworks/**/*.js",
         "lint:css": "npx stylelint --config .stylelintrc ./homeworks/**/*.{css,scss}",
+        "lint:html": "npx eslint --config .eslintrc.js ./homeworks/**/*.html",
         "lint:branch-name": "npx branch-name-lint ./.branchlintrc.json",
         "prepare": "husky install"
     },
     "dependencies": {
+        "@html-eslint/eslint-plugin": "^0.12.0",
+        "@html-eslint/parser": "^0.12.0",
         "branch-name-lint": "^2.1.1",
         "eslint": "^7.32.0",
         "eslint-config-airbnb-base": "^14.2.1",
-        "eslint-plugin-html": "^6.2.0",
         "eslint-plugin-import": "^2.24.2",
         "eslint-plugin-no-jquery": "^2.6.0",
-        "faker": "^5.5.3",
         "stylelint": "^13.13.1"
     },
     "devDependencies": {
-        "@types/faker": "^5.5.8",
         "husky": "^7.0.2",
         "lint-staged": "^11.1.2"
     },
@@ -42,7 +42,7 @@
         "*webpack.config.dev.js"
     ],
     "lint-staged": {
-        "*.js": [
+        "*.{js,html}": [
             "eslint --config .eslintrc.js"
         ],
         "*.{css,scss}": [
