--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "eslint-config-airbnb-base": "^14.2.1",
         "eslint-plugin-import": "^2.24.2",
         "eslint-plugin-no-jquery": "^2.6.0",
+        "rxjs": "^7.4.0",
         "stylelint": "^13.13.1"
     },
     "devDependencies": {
