--- a/homeworks/vladyslav.kovalov_kovalov/6-typescript/package.json
+++ b/homeworks/vladyslav.kovalov_kovalov/6-typescript/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "webpack-dev-server",
+    "start": "webpack serve --open",
+    "watch": "webpack --watch",
     "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "css-minimizer-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^5.5.0",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.2",
     "webpack": "^5.64.3",
