--- a/package.json
+++ b/package.json
@@ -23,9 +23,7 @@
     },
     "devDependencies": {
         "husky": "^7.0.2",
-        "lint-staged": "^11.1.2",
-        "ts-loader": "^9.2.6",
-        "typescript": "^4.5.2"
+        "lint-staged": "^11.1.2"
     },
     "author": "DrSmile444 <dmytro.vakulenko@masterofcode.com>",
     "license": "MIT",
