--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     },
     "devDependencies": {
         "husky": "^7.0.2",
-        "lint-staged": "^11.1.2"
+        "lint-staged": "^11.1.2",
+        "typescript": "^4.5.2"
     },
     "author": "DrSmile444 <dmytro.vakulenko@masterofcode.com>",
     "license": "MIT",
