changed: css classes, type score on number; added start watch

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/6-typesript/package.json
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/6-typesript/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "start": "webpack"
+    "start": "webpack watch"
   },
   "keywords": [],
   "author": "",
