rename class and fix bugs og js

--- a/homeworks/andrii.kholodenko_AndriiCold/6-typescript/tsconfig.json
+++ b/homeworks/andrii.kholodenko_AndriiCold/6-typescript/tsconfig.json
@@ -1,12 +1,8 @@
 {
     "compilerOptions": {
         "outDir": "./dist/",
-        "sourceMap": true,
         "noImplicitAny": true,
         "module": "es6",
-        "target": "es5",
-        "jsx": "react",
-        "allowJs": true,
-        "moduleResolution": "node"
+        "target": "es5"
     }
 }
