--- a/homeworks/andrii.kholodenko_AndriiCold/6-typescript/package.json
+++ b/homeworks/andrii.kholodenko_AndriiCold/6-typescript/package.json
@@ -8,7 +8,7 @@
     "build": "webpack",
     "start": "webpack-dev-server --mode development --open"
   },
-  "author": "",
+  "author": "AndriiCold",
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^5.0.1",
@@ -17,7 +17,7 @@
     "ts-loader": "^8.0.11",
     "typescript": "^4.1.2",
     "webpack": "4.32.2",
-    "webpack-cli": "3.3.2",
+    "webpack-cli": "^3.3.2",
     "webpack-dev-server": "3.5.1"
   },
   "dependencies": {},
