--- a/homeworks/Andrii.Morozov_AndriiMorozov88/6-typesript/package.json
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/6-typesript/package.json
@@ -5,7 +5,7 @@
   "main": "webpack.config.js",
   "scripts": {
     "start": "webpack watch",
-    "tscompile": "node_modules/typescript/tsc"
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,7 @@
   "devDependencies": {
     "webpack": "^5.64.2",
     "webpack-cli": "^4.9.1",
-    "typescript": "4.5.2"
+    "typescript": "4.5.2",
+    "ts-loader": "9.2.6"
   }
 }
