--- a/homeworks/Aleksandr.Turuta_turuta7/6-typescript/package.json
+++ b/homeworks/Aleksandr.Turuta_turuta7/6-typescript/package.json
@@ -4,17 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --config webpack.config.js"
   },
   "author": "Turuta",
   "license": "ISC",
   "devDependencies": {
-    "@types/lodash": "^4.14.177",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.2",
+    "webpack": "^5.64.4",
     "webpack-cli": "^4.9.1"
-  },
-  "dependencies": {
-    "rxjs": "^7.4.0"
   }
 }
