--- a/homeworks/nikita.karchinskiy_Nikkarchinskiy/6-typescript/package.json
+++ b/homeworks/nikita.karchinskiy_Nikkarchinskiy/6-typescript/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "6-typescript",
+  "name": "6-typesript",
   "version": "1.0.0",
   "description": "",
-  "private": true,
+  "main": "webpack.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack watch",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^5.64.3",
+    "ts-loader": "^9.2.6",
+    "typescript": "4.5.2",
+    "webpack": "^5.64.2",
     "webpack-cli": "^4.9.1"
   }
 }
