--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
         "eslint-plugin-no-jquery": "^2.6.0",
         "@typescript-eslint/eslint-plugin": "^5.5.0",
         "@typescript-eslint/parser": "^5.5.0",
-        "stylelint": "^13.13.1"
+        "stylelint": "^13.13.1",
+        "typescript": "^4.5.2"
     },
     "devDependencies": {
         "husky": "^7.0.2",
-        "lint-staged": "^11.1.2",
-        "typescript": "^4.5.2"
+        "lint-staged": "^11.1.2"
     },
     "author": "DrSmile444 <dmytro.vakulenko@masterofcode.com>",
     "license": "MIT",
