--- a/homeworks/serhii.kulakivskyi_svkul/7-oop/package.json
+++ b/homeworks/serhii.kulakivskyi_svkul/7-oop/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "copy-webpack-plugin": "^10.0.0",
     "css-loader": "^6.5.1",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.4.5",
