--- a/homeworks/konstantin.rusenko_ConstantinRusenko/7-oop/package.json
+++ b/homeworks/konstantin.rusenko_ConstantinRusenko/7-oop/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "dev": "webpack --mode development"
   },
   "author": "",
   "license": "ISC",
