--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@angular-eslint/eslint-plugin": "^13.0.1",
         "@angular-eslint/eslint-plugin-template": "^13.0.1",
         "@angular-eslint/template-parser": "^13.0.1",
+        "@angular/cli": "^13.2.4",
         "@html-eslint/eslint-plugin": "^0.12.0",
         "@html-eslint/parser": "^0.12.0",
         "@typescript-eslint/eslint-plugin": "^5.5.0",
